# fortran_pcre

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  pcre_module.f90  test.f90  test3.f90
cmake/: BuildPCRE.cmake  SetupDoxygen.cmake
contrib/pcre2/: BuildPCRE2.cmake  CMakeLists.pcre2.txt
contrib/unixutils/: distclean.sh  setup_gfortran_build.sh
doxygen/: Doxyfile.in  Doxygen_Extensions.cfg.in  doxygen_footer.tex.in  doxygen_header.tex.in
userdoc/: overview.tex  pcre2.bib  project_directory_tree.txt
